[gd_scene load_steps=2 format=3 uid="uid://k36ix267syx4"]

[ext_resource type="Script" path="res://Scenes/menu.gd" id="1_ubayj"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ubayj")

[node name="HostButton" type="Button" parent="."]
layout_mode = 0
offset_left = 546.0
offset_top = 277.0
offset_right = 554.0
offset_bottom = 285.0
text = "Host"

[node name="JoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 546.0
offset_top = 374.0
offset_right = 584.0
offset_bottom = 405.0
text = "Join"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 381.0
offset_top = 464.0
offset_right = 740.0
offset_bottom = 564.0

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
